# brass

./: Cargo.toml  README.md
brass/: Cargo.toml
brass/src/: lib.rs
brass/src/la/tensor/: mod.rs
brass_tensor/: Cargo.toml
brass_tensor/src/: lib.rs  ndarray.rs
brass_tensor/src/matrix/: mod.rs  tests.rs
brass_tensor/src/ndarray/: mod.rs
brass_tensor/src/tensor/: mod.rs  tests.rs
examples/: simple.rs
index_mask/: Cargo.toml
index_mask/src/: lib.rs
src/: control_settings.rs  event_reader.rs  lib.rs  message.rs  model.rs  model_tree.rs
tensor/: Cargo.toml
tensor/src/: lib.rs  ndarray.rs
