[package]
name = "brass"
description = "Math and statistics library for Rust"
version = "0.1.0"
edition = "2021"
license = "LICENSE.txt"
readme = "README.md"
authors = ["Luke Beukelman <lbeuK@protonmail.com>"]
repository = "https://github.com/lbeuk/brass"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
