[package]
name = "brass"
description = "Math and statistics library for Rust"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE.txt"
readme = "README.md"
authors = ["Luke Beukelman <lbeuK@protonmail.com>"]
repository = "https://github.com/lbeuk/brass"

[workspace]
members = [
    "tensor"
]

[dependencies]
tensor = { path = "tensor"}