[package]
name = "brass"
version = "0.1.3"
edition = "2021"
license = "LICENSE.txt"
readme = "README.md"
authors = ["Luke Beukelman <lbeuk@pm.me>"]
reposity = "https://github.com/lbeuk/brass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.3"
uuid = {version = "1.8.0", features = ["v4", "fast-rng"]}
